<resources>
    <string name="app_name">GPS_LocatorCW</string>
    <string name="title_activity_maps">MapsActivity</string>


    <string-array name="name">
        <item>Name1</item>
        <item>Name2</item>
        <item>Name3</item>

    </string-array>

    <string-array name="duration">
        <item>Dur1</item>
        <item>Dur2</item>
        <item>Dur3</item>

    </string-array>

    <string name="geofence_transition_invalid_type">Invalid geofence transition type</string>
    <string name="geofence_transition_notification">%1$s geofence: %2$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_the_activity_you_would_like_to_do">Select the activity you would like to do, or to view the map</string>
    <string name="home">Home</string>
    <string name="view_reminders">View Reminders</string>
    <string name="past_exercises">Past Exercises</string>
    <string name="home_btn">Home btn</string>
    <string name="activity_button">Activity button</string>
    <string name="pathfinder">PathFinder</string>
    <string name="run">Run</string>
    <string name="walk">Walk</string>
    <string name="stop">Stop</string>
    <string name="title">Title</string>
    <string name="notification_text">Notification Text</string>
    <string name="textview">TextView</string>
    <string name="pace">pace</string>
    <string name="distance_travelled">Distance Travelled</string>
    <string name="stopButton">Stop</string>
    <string name="view_all">View/Delete Reminders</string>
    <string name="pause">Pause</string>
    <string name="Notification_information">Notification Text</string>
    <string name="duration">Duration</string>
    <string name="timed">TextView</string>
    <string name="edit_notes_description">edit_notes_description</string>
    <string name="Pace_displayu">Pace</string>
    <string name="distance">Distance</string>
    <string name="avgpace">AvgPace</string>
    <string name="name">Name</string>
    <string name="duration_text">Duration Text</string>
    <string name="click_on_the_map_to_set_a_reminder">Click on the map to set a reminder!</string>
    <string name="see_how_you_improved">See how you improved</string>
    <string name="delete_button">Delete button</string>
    <string name="current_exercise">Current Exercise:</string>
    <string name="cycle">Cycle</string>

</resources>