

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.gps_locatorcw.viewmodel.StatsViewModel" /> <!-- Replace with your ViewModel class -->
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"

        android:layout_height="match_parent"
        >


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="89dp"
            android:layout_marginBottom="114dp"
            android:text="@string/click_on_the_map_to_set_a_reminder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timer" />

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="220dp"

            android:layout_marginBottom="156dp"
            android:text="@{`Duration: ` + viewModel.getExerciseDuration()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/avgpace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginEnd="276dp"
            android:layout_marginBottom="156dp"
            android:text="@{`Avg Pace: ` + viewModel.getAveragePace()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/distanceTrav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="73dp"
            android:text="@{`Distance: ` + String.valueOf(viewModel.getDistanceTravelled())}"
            app:layout_constraintEnd_toStartOf="@+id/stopbtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/stat_fragment" />

        <fragment
            android:id="@+id/stat_fragment"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="448dp"
            android:layout_height="490dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Add the initial visibility attribute to the stop button -->
        <Button
            android:id="@+id/stopbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="236dp"
            android:text="@string/stopButton"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />
        <Button
            android:id="@+id/viewAll"
            android:layout_width="88dp"
            android:layout_height="55dp"
            android:layout_marginBottom="596dp"
            android:text="@string/view_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/startExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="136dp"
            android:layout_marginBottom="8dp"
            android:text="Start Exercise"
            app:layout_constraintBottom_toTopOf="@+id/stopbtn"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Other UI components or buttons can be added here -->

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
